@@ -38,14 +38,16 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Support for sparc32 has been discontinued for Lenny. This also means that
     booting from floppy is no longer supported for sparc.
+  * Extend the documentation of apt-setup, especially the decision whether or
+    not to use a network mirror. Document selection of services.
   * Document new apt-setup/services-select and related hostname preseeds.
 
   [ Joey Hess ]
   * Document how to preseed partman-auto to use only available disk, no matter
     what it's name is.
-  * Call dh_md5sums.
+  * debian/rules: call dh_md5sums.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 17 Aug 2007 13:50:54 -0400
+ -- Frans Pop <fjp@debian.org>  Sat, 20 Oct 2007 20:52:43 +0200
 
 installation-guide (20070319) unstable; urgency=low
 
